--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,8 +1,18 @@
-name: sample-expressjs
+name: auxiapp
 services:
-- environment_slug: node-js
-  github:
-    branch: main
-    deploy_on_push: true
-    repo: digitalocean/sample-expressjs
-  name: sample-expressjs
+  - name: auxiapp-backend
+    environment_slug: node-js
+    github:
+      repo: Oscar-M-Quintana/AuxiApp
+      branch: main
+      deploy_on_push: true
+    run_command: "npm start"
+    http_port: 3000
+    instance_count: 1
+    instance_size_slug: basic-xxs
+    routes:
+      - path: /
+    envs:
+      - key: NODE_ENV
+        value: production
+
