--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
